--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Use Node.js
         uses: actions/setup-node@v1
+        with:
+          node-version: '12.22.1'
 
       - name: Build static files
         run: |
