--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,12 +18,12 @@ jobs:
           npm install
           npm run build
 
-      - name: Deploy to Tencent CloudBase
-        uses: TencentCloudBase/cloudbase-action@v2
-        with:
-          secretId: ${{secrets.secretId}}
-          secretKey: ${{secrets.secretKey}}
-          envId: ${{secrets.envId}}
+#       - name: Deploy to Tencent CloudBase
+#         uses: TencentCloudBase/cloudbase-action@v2
+#         with:
+#           secretId: ${{secrets.secretId}}
+#           secretKey: ${{secrets.secretKey}}
+#           envId: ${{secrets.envId}}
       
       - name: Deploy
         run: |
